# internal/apiclient/api.yaml
@@ -324,8 +324,72 @@ paths:
                     type: array
                     items:
                       $ref: "#/components/schemas/DnsRecord"
-  # /v3/dns/createDnssecRecord/{domain}:
-  # /v3/dns/getDnssecRecords/{domain}:
+  /v3/dns/getDnssecRecords/{domain}:
+    post:
+      operationId: dnssecGetRecords
+      parameters:
+        - $ref: "#/components/parameters/domainPath"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/ApiKeyAndSecretKey"
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/DnssecGetRecordsResponse"
+  /v3/dns/createDnssecRecord/{domain}:
+    post:
+      operationId: dnssecCreateRecord
+      parameters:
+        - $ref: "#/components/parameters/domainPath"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              allOf:
+                - $ref: "#/components/schemas/ApiKeyAndSecretKey"
+                - type: object
+                  required:
+                    - alg
+                    - digestType
+                    - digest
+                    - keyDataFlags
+                    - keyDataProtocol
+                    - keyDataAlgo
+                    - keyDataPubKey
+                  properties:
+                    alg:
+                      type: string
+                    digestType:
+                      type: string
+                    digest:
+                      type: string
+                    maxSigLife:
+                      type: string
+                    keyDataFlags:
+                      type: string
+                    keyDataProtocol:
+                      type: string
+                    keyDataAlgo:
+                      type: string
+                    keyDataPubKey:
+                      type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - status
+                properties:
+                  status:
+                    type: string
   # /v3/dns/deleteDnssecRecord/{domain}:
 components:
   parameters:
@@ -456,3 +520,47 @@ components:
         notes:
           type: string
           nullable: true
+    DnssecGetRecords:
+      type: object
+      required:
+        - keyTag
+        - alg
+        - digestType
+        - digest
+        - maxSigLife
+        - keyDataFlags
+        - keyDataProtocol
+        - keyDataAlgo
+        - keyDataPubKey
+      properties:
+        keyTag:
+          type: string
+        alg:
+          type: string
+        digestType:
+          type: string
+        digest:
+          type: string
+        maxSigLife:
+          type: string
+        keyDataFlags:
+          type: string
+        keyDataProtocol:
+          type: string
+        keyDataAlgo:
+          type: string
+        keyDataPubKey:
+          type: string
+
+    DnssecGetRecordsResponse:
+      type: object
+      required:
+        - status
+        - records
+      properties:
+        status:
+          type: string
+        records:
+          type: object
+          additionalProperties:
+            $ref: "#/components/schemas/DnssecGetRecords"
